Linear Algebra: Aesthetic commit, essentially nothing useful done

--- a/linear/index.jade
+++ b/linear/index.jade
@@ -2,4 +2,5 @@ title Linear
 script(src="bin/maybe.js")
 script(src="bin/type.js")
 script(src="bin/matrix.js")
-//- script(src="bin/evil.js")
+script(src="bin/vector.js")
+script(src="bin/scalar.js")
